100-DOKS-Kubernetes/app-swimmpair-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: swimmpair-service-prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: swimmpair-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swimmpair-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swimmpair-prod
  template:
    metadata:
      labels:
        app: swimmpair-prod
    spec:
      containers:
      - name: swimmpair-prod
        image: stepanklos/swimmpair:1.00
        securityContext:
          allowPrivilegeEscalation: true
        ports:
        - containerPort: 80
