100-DOKS-Kubernetes/docu-swimmpair.yaml
apiVersion: v1
kind: Service
metadata:
  name: docu-swimmpair-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: docu-swimmpair
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docu-swimmpair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docu-swimmpair
  template:
    metadata:
      labels:
        app: docu-swimmpair
    spec:
      containers:
      - name: docu-swimmpair
        image: stepanklos/docu-swimmpair:latest
        ports:
        - containerPort: 80
